# ReleaseNotificationBot

./: Cargo.toml  dockerfile
.github/workflows/: publish.yml
src/: CustomError.rs  Discord.rs  GitHub.rs  Middleware.rs  main.rs
