[package]
name = "ReleaseNotificationBot"
version = "0.1.0"
edition = "2024"

[dependencies]
xitca-web = { version = "*", features = ["logger", "json", "codegen"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
twilight-http = "0.16"
twilight-model = "0.16"
twilight-gateway = "0.16"
futures = "0.3"
rand = "0.8"
twilight-util = { version = "0.16", features = ["builder"] }